# owned-singleton

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: export.rs  lib.rs
