[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "Procedural macros re-exported in the owned-singleton crate"
keywords = ["owned", "singleton", "proxy"]
license = "MIT OR Apache-2.0"
name = "owned-singleton-macros"
repository = "https://github.com/japaric/owned-singleton"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.20"
quote = "0.6.8"

[dependencies.rand]
default-features = false
version = "0.5.5"

[dependencies.syn]
features = ["full"]
version = "0.15.13"
